--- a/zzbr.html
+++ b/zzbr.html
@@ -1,5 +1,5 @@
 <html>
-<<head>
+<head>
   <script type='text/javascript' src='https://code.jquery.com/jquery-1.12.4.js'></script>
 <script type='text/javascript'>
     function myFunction() {
