--- a/zzbr.html
+++ b/zzbr.html
@@ -14,7 +14,7 @@
 <body>
 <p>Chess Concept: The Back Rank Checkmate</p>
 <h3><em>This is a common checkmate, in which a Rook or Queen checkmates the king on the 8th rank.</em></h3>
-<p><ul><span style="color: #ff0000;">Here is an example.</span></p></ul>
+<p><ul><span style="color: #ff0000;"><strong>Here is an example.</strong></span></ul></p>
 <p>
   <span style="color: #ff0000;"
     ><img
@@ -43,10 +43,6 @@
   <input type="radio" id="no" name="of" value="no">
 <label for="html">Rook takes Rook</label><br>
 <h2 style="padding-left: 30px;">Yaddda Horseradish</h2>
-<ul>
-  <li>Scroll Down</li>
-  <li>no</li>
-  <li><strong>not entirely sure</strong></li>
-</ul>
+
 </body>
 </html>
