--- a/zzbr.html
+++ b/zzbr.html
@@ -14,7 +14,7 @@
 <body>
 <p>Chess Concept: The Back Rank Checkmate</p>
 <h3><em>This is a common checkmate, in which a Rook or Queen checkmates the king on the 8th rank.</em></h3>
-<p><ul><span style="color: #ff0000;"><strong>Here is an example.</strong></span></ul></p>
+<p><ul><strong>Here is an example.</strong></ul></p>
 <p>
   <span style="color: #ff0000;"
     ><img
