--- a/zzbr.html
+++ b/zzbr.html
@@ -16,8 +16,7 @@
 <h3><em>This is a common checkmate, in which a Rook or Queen checkmates the king on the 8th rank.</em></h3>
 <p><ul><strong>Here is an example.</strong></ul></p>
 <p>
-  <span style="color: #ff0000;"
-    ><img
+  <img
       src="https://i.imgur.com/ompJiF8.pngS"
       alt="As you can see. Bleep Bloop"
       width="245"
@@ -35,7 +34,6 @@
 <div><h1>Click to Reveal</h1>
 <button onclick="myFunction()">Click Me</button>
 </div>
-</span>
 </p>
 <label for="yes">Queen takes rook:</label>
   <input type="radio" id="yes" name="of" value="yes">
