--- a/zzbr.html
+++ b/zzbr.html
@@ -3,7 +3,7 @@
   <script type='text/javascript' src='https://code.jquery.com/jquery-1.12.4.js'></script>
 <script type='text/javascript'>
     function myFunction() {
-      var img = document.getElementById(myIMG);
+      var img = document.getElementById('myIMG');
     img.style.visibility = (visible ? 'visible' : 'hidden');
   }
   </script>
