--- a/zzbr.html
+++ b/zzbr.html
@@ -2,10 +2,12 @@
 <head>
   <script type='text/javascript' src='https://code.jquery.com/jquery-1.12.4.js'></script>
 <script type='text/javascript'>
-    function myFunction() {
-      var img = document.getElementById('myIMG');
-    img.style.visibility = (visible ? 'visible' : 'hidden');
-  }
+  function tend() {
+      document.getElementById('my').style.visibility='visible';
+    }
+    function tn() {
+      document.getElementById('my').style.visibility='hidden';
+    }
   </script>
 </head>
 <body>
@@ -23,13 +25,14 @@
     <img id="myIMG"
         src="https://i.imgur.com/qWLYisO.png"
         alt="As you can see. Bleep Bloop"
-        width="245"
-        height="221"
-        style: display = "none"/>
+        width="700"
+        height="700"
+        style: visibility = "hidden"/>
 
   </div>
 <div><h1>Click to Reveal</h1>
-<button onclick="myFunction()">Click Me</button>
+<button onclick="tend()">Show</button>
+<button onclick="tn()">Unshow</button>
 </div>
 </p>
 <label for="yes">Queen takes rook:</label>
