--- a/zzbr.html
+++ b/zzbr.html
@@ -27,7 +27,7 @@
         alt="As you can see. Bleep Bloop"
         width="700"
         height="700"
-        style: visibility = "hidden"/>
+        style.visibility = "hidden"/>
 
   </div>
 <div><h1>Click to Reveal</h1>
