--- a/zzbr.html
+++ b/zzbr.html
@@ -26,13 +26,12 @@
         src="https://i.imgur.com/qWLYisO.png"
         alt="As you can see. Bleep Bloop"
         width="700"
-        height="700"
-        style = "visiblity:hidden"/>
+        height="700"/>
 
   </div>
 <div><h1>Click to Reveal</h1>
-<button onclick="tend()">Show</button>
-<button onclick="tn()">Unshow</button>
+<button type="button" onclick="tend()">Show</button>
+<button type="button" onclick="tn()">Unshow</button>
 </div>
 </p>
 <label for="yes">Queen takes rook:</label>
