--- a/zzbr.html
+++ b/zzbr.html
@@ -22,7 +22,7 @@
       height="221"
   />
   <div id="myDIV">
-    <img id="myIMG"
+    <img id="my"
         src="https://i.imgur.com/qWLYisO.png"
         alt="As you can see. Bleep Bloop"
         width="700"
