--- a/zzbr.html
+++ b/zzbr.html
@@ -14,17 +14,26 @@
 <p>Chess Concept: The Back Rank Checkmate</p>
 <h3><em>This is a common checkmate, in which a Rook or Queen checkmates the king on the 8th rank.</em></h3>
 <p><ul><strong>Here is an example.</strong></ul></p>
-  <img
-      src="https://i.imgur.com/ompJiF8.pngS"
-      alt="As you can see. Bleep Bloop"
-      width="245"
-      height="221"
-  />
+
+<table>
+  <tr>
+    <td>
     <img id="my"
         src="https://i.imgur.com/qWLYisO.png"
         alt="As you can see. Bleep Bloop"
         width="700"
         height="700"/>
+        </td>
+    <td>
+      <img id="my"
+          src="https://i.imgur.com/qWLYisO.png"
+          alt="As you can see. Bleep Bloop"
+          width="700"
+          height="700"/>
+          </td>
+  </tr>
+</table>
+
 <div><h1>Click to Reveal</h1>
 <button type="button" onclick="tend()">Show</button>
 <button type="button" onclick="tn()">Unshow</button>
